--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fontsource-variable/montserrat": "^5.0.19",
     "astro": "^4.7.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3"
